hphp/hack/test/typecheck/deprecated_attr_bad.php
<?hh

<<__Deprecated(FOO)>>
function f() {}
